--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="about-r">
              <div class="my-profile">
               <!-- <img src="https://scontent.fbom14-1.fna.fbcdn.net/v/t1.0-9/18620063_1402721573128978_2658884278530320152_n.jpg?oh=4524ec3b3d5596eff4913db6c75debb3&oe=5A97AB32" alt="" class="img-circle img-responsive"> -->
-              <img src="assets/img/mypic.jpg" class="img-responsive">
+              <img src="assets/img/mypic.JPG" class="img-responsive">
             </div>
             <div class="personal_detail">
                 <ul>
