--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-image: url(assets/img/bg.png);
+    background-image: url(../assets/img/bg.png);
     background-position: bottom;
     background-attachment: fixed;
     background-repeat: no-repeat;
