--- a/index.html
+++ b/index.html
@@ -12,57 +12,8 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
   <style>
-    .site-btn {
-    position: relative;
-    display: inline-block;
-    color: #fff;
-    padding: 14px 40px;
-    border: none;
-    font-family: "Poppins", sans-serif;
-    line-height: normal;
-    text-transform: uppercase;
-    border-radius: 50px;
-    font-size: 12px;
-    letter-spacing: 1px;
-    background: #333;
-}
-.site-btn.btn-light {
-    background: #fff;
-    color: #333;
-    font-weight: bold;
-}
-.promotion h2 {
-    color: #fff;
-    font-size: 35px;
-}
-.promotion {
-    text-align: center;
-}
-.promotion-section {
-    position: relative;
-    padding: 150px 0;
-}
-.promotion-bg {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-image: url(../assets/img/bg.png);
-    background-position: bottom;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-}
-.promotion-bg:after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: #000;
-    opacity: 0.7;
-}
+
+/*aasasfsd*/
   </style>
     <title>Kunal Chavda - Front End Web Developer</title>
 
@@ -121,7 +72,7 @@
 		</div>
     <div class="gd-wp">
       <div class="go-down">     
-        <a href="#about"><span></span></a>
+        <a class="gd" href="#about"><span></span></a>
       </div>
     </div>		
 	</section>
@@ -158,60 +109,60 @@
               <p>I have been working as a Web Developer since, I am very dedicated about web programming and I try to learn a new skill every day. I'm honest, communicable, responsible and always ready to work on something new.</p>
               <h2 class="sub-h">Skills</h2>
               <div class="skill-wrapper row wow fadeIn" data-wow-delay="0.8s" data-wow-duration="2s">
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
                     <span class="percent">90%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle"></div>
                     <h2 class="skill-text" style="text-transform:uppercase;">html</h2>
                   </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
                     <span class="percent">90%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle1"></div>
                     <h2 class="skill-text" style="text-transform:uppercase;">css</h2>
                   </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
-                    <span class="percent">90%</span>
+                    <span class="percent">60%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle2"></div>
                     <h2 class="skill-text" style="text-transform:uppercase; margin-left: -12px">javascript</h2>
                   </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
-                    <span class="percent">90%</span>
+                    <span class="percent">40%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle3"></div>
                     <h2 class="skill-text" style="text-transform:uppercase;">php</h2>
                   </div>
                 </div>
               </div>
               <div class="skill-wrapper1 row wow fadeIn" data-wow-delay="0.8s" data-wow-duration="2s">
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
-                    <span class="percent">90%</span>
+                    <span class="percent">30%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle4"></div>
                     <h2 class="skill-text" style="text-transform:uppercase;">Drupal</h2>
                   </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
-                    <span class="percent">90%</span>
+                    <span class="percent">65%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle5"></div>
                     <h2 class="skill-text" style="text-transform:uppercase; margin-left: -12px">wordpress</h2>
                   </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
-                    <span class="percent">90%</span>
+                    <span class="percent">45%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle6"></div>
                     <h2 class="skill-text" style="text-transform:uppercase; margin-left: -12px">photoshop</h2>
                   </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-6 col-md-3">
                   <div class="pie-effect">
-                    <span class="percent">90%</span>
+                    <span class="percent">70%</span>
                     <div class="pie" data-animation-start-value="0" data-thickness="10" id="circle7"></div>
                     <h2 class="skill-text" style="text-transform:uppercase; margin-left: -12px">jquery</h2>
                   </div>
@@ -242,34 +193,6 @@
                     <span>Nov 2016 - Present</span>
                     <h4>Web Developer</h4>
                     <p class="bld">Futuready Media Pvt Ltd</p>
-                    <!-- <div class="panel-group" id="accordion">
-                      <div class="panel panel-default">
-                          <div class="panel-heading">
-                              <h4 class="panel-title">
-                                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Roles and Responsilities</a>
-                              </h4>
-                          </div>
-                          <div id="collapse1" class="panel-collapse collapse">
-                              <div class="panel-body">
-                                <p class="bld"> Maintenance of a Drupal based website:</p>
-                                  Tasks includes following:
-                                  <ul>
-                                    <li>Developement of new pages / redesign of old pages using HTML, CSS, JS and PHP.</li>
-                                    <li>UI changes of different pages or different sections.</li>
-                                    <li>Adding functionlity to pages such as integration of Drupal form, rendering form, creating view blocks.</li>
-                                    <li>Updating of new blogs. </li>
-                                    <li>Drupal form data handling.</li>
-                                    <li>Drupal Forms and Nodes creation.</li>
-                                    <li>Developed responsive websites using HTML, CSS, JavaScript, PHP and Bootstrap for the clients.</li>
-                                    <li>Developed responsive websites using WordPress, and integrating wordpress themes, plugins and customizing few sections for clients. </li>
-                                    <li>Created subdomains for new client projects and deployed all the new websites using hosting services like Bluehost, Hostgator, Justhost.</li>
-                                    <li>Finding and fixing bugs on client websites and adding functionality like Isotope, carousels, Lightbox, PHP form development. </li>
-                                    <li>Implemented various SEO strategies like adding keywords, meta tags, relevant internal links, minifying code and integrating GTM Code, Schema code; by auditing their SEMRush, Google Analytics and PageSpeed which led to better web ranking and goal conversions.</li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
-                  </div> -->
                 </div>
             </div>
             <div class="resume-box wow fadeInUp col-md-6" data-wow-delay=".2s">
@@ -282,26 +205,6 @@
                     <span>July 2016 - Oct 2016</span>
                     <h4>Internship</h4>
                     <p class="bld">MAD Infotech Pvt Ltd</p>
-                    <!-- <div class="panel-group" id="accordion1">
-                      <div class="panel panel-default">
-                          <div class="panel-heading">
-                              <h4 class="panel-title">
-                                  <a data-toggle="collapse" data-parent="#accordion1" href="#collapse11">Roles and Responsilities</a>
-                              </h4>
-                          </div>
-                          <div id="collapse11" class="panel-collapse collapse">
-                              <div class="panel-body">
-                                <p class="bld"> Maintenance of a Drupal based website:</p>
-                                  Tasks includes following:
-                                  <ul>
-                                    <li>Developed responsive websites using HTML, CSS, JavaScript, PHP and Bootstrap for the clients.</li>
-                                    <li>Developed responsive websites using WordPress, and integrating wordpress themes, plugins.</li>
-                                    <li>Adding functionality to the website like Isotope, carousels, PHP form development.</li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
-                  </div> -->
                 </div>
             </div>
           </div>
@@ -320,7 +223,6 @@
                     
                 </div>
             </div>
-
             <!-- Resume item -->
             <div class="resume-box wow fadeInUp col-md-4" data-wow-delay=".2s">
                 <div class="left-content">
@@ -360,47 +262,37 @@
       </div>
       <div class="gallry">
         <div class="col-md-12 roow">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
+              <img src="http://via.placeholder.com/500" class="img-responsive" alt="">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
+              <img src="http://via.placeholder.com/500" class="img-responsive" alt="">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
+              <img src="http://via.placeholder.com/500" class="img-responsive" alt="">
             </div>
           </div>
         </div>
 
         <div class="col-md-12 roow">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
+              <img src="http://via.placeholder.com/500" class="img-responsive" alt="">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
+              <img src="http://via.placeholder.com/500" class="img-responsive" alt="">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="gallry-wraper">
-              <img src="http://via.placeholder.com/300" class="img-responsive" alt="">
+              <img src="http://via.placeholder.com/500" class="img-responsive" alt="">
             </div>
           </div>
         </div>
@@ -439,49 +331,49 @@
     }
   });
     $('#circle1').circleProgress({
-    value: 0.8,
+    value: 0.9,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
     }
   });
   $('#circle2').circleProgress({
-    value: 0.7,
+    value: 0.6,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
     }
   });
   $('#circle3').circleProgress({
-    value: 0.75,
+    value: 0.40,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
     }
   });
   $('#circle4').circleProgress({
-    value: 0.75,
+    value: 0.30,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
     }
   });
   $('#circle5').circleProgress({
-    value: 0.75,
+    value: 0.65,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
     }
   });
   $('#circle6').circleProgress({
-    value: 0.75,
+    value: 0.45,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
     }
   });
   $('#circle7').circleProgress({
-    value: 0.75,
+    value: 0.70,
     size: 100,
     fill: {
       gradient: ["black", "grey"]
