--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
   <style>
-
 /*aasasfsd*/
   </style>
     <title>Kunal Chavda - Front End Web Developer</title>
@@ -43,7 +42,7 @@
             <span class="icon-bar middle-bar"></span>
             <span class="icon-bar bottom-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">K U N A L &nbsp;&nbsp;C H A V D A</a>
+          <a class="navbar-brand" id="logo" href="#home">K U N A L &nbsp;&nbsp;C H A V D A</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav" id="top-menu">
@@ -66,7 +65,7 @@
 				<h1 class="wow zoomIn" data-wow-delay="0.8s" data-wow-duration="2s">I'm Kunal Chavda</h1>
 				<p>FRONT-END <span class="wow bounceInRight animate" data-wow-delay="1s" data-wow-duration="2s">WEB DEVELOPER</span></p>
 				<div class="abt-btn">
-					<a href="#about" class="btn btn-default btn-lg page-scroll">More About Me</a>
+					<a id="abt" href="#about" class="btn btn-default btn-lg page-scroll">More About Me</a>
 				</div>
 			</div>
 		</div>
@@ -79,7 +78,9 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="title text-center">
+				<div class="border-center"></div>
 				<h1>About me</h1>
+				<div class="border-center"></div>
 			</div>
 			<div class="row">
         <div class="col-md-4">
@@ -177,7 +178,9 @@
   <section class="experience" id="experience">
     <div class="container">
       <div class="title text-center">
+      	<div class="border-center"></div>
         <h1>Experience</h1>
+      	<div class="border-center"></div>
       </div>
       <div class="col-md-12 education">
         <!-- Resume item -->
@@ -258,7 +261,9 @@
   <section class="portfolio" id="portfolio">
     <div class="container">
       <div class="title text-center">
-        <h1>My Portfolio</h1>
+      	<div class="border-center"></div>
+        	<h1>My Portfolio</h1>
+        <div class="border-center"></div>
       </div>
       <div class="gallry">
         <div class="col-md-12 roow">
@@ -298,9 +303,9 @@
         </div>
       </div>
   </section>
-  <section id="hire-me">
+  <section>
     <section class="promotion-section">
-      <div class="promotion-bg"></div>
+      <div id="hire-me" class="promotion-bg"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 promotion">
@@ -310,7 +315,51 @@
         </div>
       </div>
     </section>
+    <div class="hire-form">
+    	<div class="container">
+    		<div class="title text-center">
+		      	<div class="border-center"></div>
+		        <h1>Leave a message</h1>
+		      	<div class="border-center"></div>
+	      	</div>
+    		<div class="col-md-8 col-md-offset-2">
+                <div class="contact-form wow fadeInUp" data-wow-delay=".4" style="visibility: visible; animation-name: fadeInUp;">
+                    <form action="#" method="post">
+                        <div class="single col-md-6">
+                            <input type="text" name="name" class="controler" placeholder="input your name" required="">
+                        </div>
+                        <div class="single col-md-6">
+                            <input type="email" name="email" class="controler" placeholder="Enter your email" required="">
+                        </div>
+                        <div class="single col-md-12">
+                            <textarea name="textarea" id="message" cols="25" rows="10" placeholder="write message"></textarea>
+                        </div>
+                        <div class="form-submit text-center">
+                            <input type="submit" name="comment-sub" value="submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+    	</div>
+    </div>
   </section>
+	<footer class="footer-area">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col-md-12">
+	                    <div class="footer-inner-content text-center wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+	                        <p> © 2017 Kunal Chavda Resume | All Rights Reserved.</p>
+	                        <div class="footer-social-icon">
+	                            <ul>
+	                                <li><a target="_blank" href="https://www.facebook.com/kunal.chavda.355"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+	                                <li><a target="_blank" href="https://www.linkedin.com/in/kunal-chavda/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+	                            </ul>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
