--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li class="hvr-underline-from-center"><a href="#experience">Experience</a></li>
             <li class="hvr-underline-from-center"><a href="#portfolio">Portfolio</a></li>
             <li class="hvr-underline-from-center"><a href="#hire-me">Hire Me</a></li>
-            <li class="hvr-underline-from-center"><a href="Kunalchavda.pdf" target="_blank" download>Download CV</a></li>
+            <li class="hvr-underline-from-center"><a href="Kunalchavda.pdf" target="_blank">Resume</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
