--- a/index.html
+++ b/index.html
@@ -428,6 +428,105 @@
       gradient: ["black", "grey"]
     }
   });
+	        var data = {};
+    var name_pattern=/^[A-Za-z .'-]+$/;
+    var email_pattern=/^[a-zA-Z][\w\.-]*[a-zA-Z0-9]@[a-zA-Z0-9][\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]$/;
+    // var phone_pattern = /^[0-9]+$/;
+  jQuery('#modal_send-contact').on("click",function(){
+    var validation = true;
+    name_val = jQuery("#username").val();
+    // phone_val = jQuery("#phone1").val();
+    email_val = jQuery("#email").val();
+    
+    name_match  = name_val.match(name_pattern);
+    email_match  = email_val.match(email_pattern);
+    // phone_match  = phone_val.match(phone_pattern);
+
+
+    if(name_val!= ''){
+
+      if(name_match === null){
+        validation = false;
+        jQuery('#username').val('');
+        jQuery('#username').attr("placeholder","Invalid format");
+        jQuery('#username').addClass('inputTxtError');
+
+      }else{
+        jQuery('#username').parent().find('.error').text("span").remove();
+        jQuery('#username').removeClass('inputTxtError');
+      }
+    }else{
+      jQuery('#username').attr("placeholder","Enter Name");
+      jQuery('#username').addClass('inputTxtError');
+      validation = false;
+    }
+/*
+    if(phone_val!= ''){
+
+      if(phone_match === null){
+        validation = false;
+        jQuery('#phone1').val('');
+        jQuery('#phone1').attr("placeholder","Invalid format");
+        jQuery('#phone1').addClass('inputTxtError');
+
+      }else{
+        jQuery('#phone1').parent().find('.error').text("span").remove();
+        jQuery('#phone1').removeClass('inputTxtError');
+      }
+    }else{
+      jQuery('#phone1').attr("placeholder","Enter Phone Number");
+      jQuery('#phone1').addClass('inputTxtError');
+      validation = false;
+    }
+*/
+    if(email_val!= ''){
+
+      if(email_match === null){
+        validation = false;
+        jQuery('#email').val('');
+        jQuery('#email').attr("placeholder","Invalid format");
+        jQuery('#email').addClass('inputTxtError');
+
+      }else{
+        jQuery('#email').parent().find('.error').text("span").remove();
+        jQuery('#email').removeClass('inputTxtError');
+      }
+    }else{
+      jQuery('#email').attr("placeholder","Enter Email");
+      jQuery('#email').addClass('inputTxtError');
+      validation = false;
+    }
+
+
+    if(validation){
+    jQuery('#modal_send-contact').text("Registering...");
+       jQuery.ajax({
+           type: "POST",
+           url: "mail_post.php",
+           data: jQuery("#hire-me").serialize(), // serializes the form's elements.
+           beforeSend: function() {
+               //alert("error");
+               //alert("before send");
+            },
+           success: function(data)
+           {  console.log(data);
+               jQuery('#modal_send-contact').text("SUBMIT");
+                document.getElementById("hire-me").reset();
+               if(data == "mailsent"){
+                     /*swal({   
+                        title: "Thank you for  your interest",  
+                        type:"success", 
+                        text: "We will get back to you within a few hours"
+                    });*/
+                    alert("Will get in touch with you")
+                 }
+                 else{
+                     alert("Some problem with the form,please try again.");
+                 }
+               }
+         });
+    }
+  });
     </script>
   </body>
 </html>
