--- a/index.html
+++ b/index.html
@@ -324,18 +324,19 @@
 	      	</div>
     		<div class="col-md-8 col-md-offset-2">
                 <div class="contact-form wow fadeInUp" data-wow-delay=".4" style="visibility: visible; animation-name: fadeInUp;">
-                    <form action="#" method="post">
+                   <form id="hire-me" action="#" method="post">
                         <div class="single col-md-6">
-                            <input type="text" name="name" class="controler" placeholder="input your name" required="">
+                            <input type="text" id="username" name="username" class="controler" placeholder="input your name" required="">
                         </div>
                         <div class="single col-md-6">
-                            <input type="email" name="email" class="controler" placeholder="Enter your email" required="">
+                            <input type="email" id="email" name="email" class="controler" placeholder="Enter your email" required="">
                         </div>
                         <div class="single col-md-12">
-                            <textarea name="textarea" id="message" cols="25" rows="10" placeholder="write message"></textarea>
+                            <textarea name="msg" id="message" cols="25" rows="10" placeholder="write message"></textarea>
                         </div>
                         <div class="form-submit text-center">
-                            <input type="submit" name="comment-sub" value="submit">
+                            <!-- <input type="submit" name="comment-sub" value="submit"> -->
+                            <button type="button" class="btn btn-two" data="#contactform" id="modal_send-contact">Submit</button>
                         </div>
                     </form>
                 </div>
