--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 	      	</div>
     		<div class="col-md-8 col-md-offset-2">
                 <div class="contact-form wow fadeInUp" data-wow-delay=".4" style="visibility: visible; animation-name: fadeInUp;">
-                   <form id="hire-me" action="#" method="post">
+                   <form id="hire-me" action="" method="post">
                         <div class="single col-md-6">
                             <input type="text" id="username" name="username" class="controler" placeholder="input your name" required="">
                         </div>
