--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
            url: "http://formspree.io/kunalchavda99@gmail.com",
            data: jQuery("#hire-me").serialize(), // serializes the form's elements.
 	   dataType: "json",
+	   accepts:"application/json",
            beforeSend: function() {
                //alert("error");
                //alert("before send");
