--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
 
                        if (validation) {
                           var $contactForm = $('#hire-me');
-                          $contactForm.submit(function(e) {
-                                  e.preventDefault();
+                          $contactForm.submit(function() {
+                                  
                                   jQuery.ajax({
                                       url: '//formspree.io/kunalchavda99@gmail.com',
                                       method: 'POST',
