--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <li><strong>Resience:</strong>   Mumbai, India</li>
                     <li><strong>Phone:</strong>   +91 - 8080-799-580</li>
                     <li><strong>Email:</strong>   kunalchavda99@gmail.com</li>
-                    <li><strong>Skype:</strong>   kunalchavda</li>
+                    <li><strong>Skype:</strong>   kunalchavda@outlook.com</li>
                 </ul>
             </div>
           </div>
