--- a/index.html
+++ b/index.html
@@ -483,19 +483,14 @@ return false;
                                   });
                               })
 
-
+$(document).ready(function (){
+	$("a#hre").click(function (){
+		$('html, body').animate({
+		scrollTop: $(".hire-form").offset().top
+	}, 1000);
+});
+});
          
     </script>
   </body>
 </html>
-
-
-
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-
-
-
-
-<script>
-
-</script>
