--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <ul>
                     <li><strong>Name:</strong>   Kunal Chavda</li>
                     <li><strong>Date of birth:</strong>   27th April, 1993 </li>
-                    <li><strong>Resience:</strong>   Mumbai, India</li>
+                    <li><strong>Residence:</strong>   Mumbai, India</li>
                     <li><strong>Phone:</strong>   +91 - 8080-799-580</li>
                     <li><strong>Email:</strong>   kunalchavda99@gmail.com</li>
                     <li><strong>Skype:</strong>   kunalchavda@outlook.com</li>
